# marcura-charterparty

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  development.md  glossary.md  task.md
docs/site/: index.html
eval/: ground_truth.md
output/: clauses.html  clauses.json
src/extractor/: pyproject.toml
src/extractor/extractor/: __init__.py  __main__.py  cli.py  inline.py  models.py  output.py  pdf.py  pipeline.py  sections.py  shellvoy.py  text.py
src/extractor/extractor/eval/: __init__.py  __main__.py  golden.json  runner.py
src/extractor/tests/: test_eval_runner.py  test_line_vote_filter.py  test_models.py  test_output.py  test_pipeline_against_sample.py  test_text.py
src/llm/: pyproject.toml
src/llm/llm/: __init__.py  clients.py  settings.py  verifier.py
src/llm/tests/: test_integration_azure.py  test_settings.py  test_verifier.py
