[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [{ name = "marcura-charterparty" }]
name = "extractor"
version = "0.1.0"
description = "Deterministic PDF clause extractor — PyMuPDF + bbox geometry"
requires-python = ">=3.13"
dependencies = [
  "pymupdf>=1.27",
  "pydantic>=2",
]

[tool.setuptools]
include-package-data = true
packages = { find = {} }

[tool.setuptools.package-data]
"*" = ["*"]
