[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [{ name = "marcura-charterparty" }]
name = "llm"
version = "0.1.0"
description = "Azure-hosted LLM clients (OpenAI + Foundry) for clause verification"
requires-python = ">=3.13"
dependencies = [
  "openai>=1.50",
  "azure-ai-inference>=1.0.0b9",
  "azure-core>=1.30",
  "pydantic>=2",
  "pydantic-settings>=2",
  "extractor",
]

[tool.setuptools]
include-package-data = true
packages = { find = {} }

[tool.setuptools.package-data]
"*" = ["*"]
